revision of ctas w body copy present

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <meta property="og:description" content="Double Pride Display is a new invention from South Point Industries. Now you can display your flags from the comfort of your living room!" />
     <meta property="og:image" content="" />
 
-    <title>Business Casual - Start Bootstrap Theme</title>
+    <title>Double Pride Display [Now! Display Your Flags Indoors!]</title>
 
     <!-- Bootstrap core CSS -->
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -41,92 +41,93 @@
     <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-THBF85B"
     height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
     <!-- End Google Tag Manager (noscript) -->
-
+    <div class="header-border top"></div>
+    <div class="header-border top"></div>
     <h1 class="site-heading text-center text-white d-none d-lg-block">
       <span class="site-heading-upper text-primary mb-3">The Best Way to Show Your Support</span>
       <span class="site-heading-lower">Double Pride Display</span>
     </h1>
+    <div class="header-border bottom"></div>
+    <div class="header-border bottom"></div>
 
-    <a class="cta" href="#">CAPTURE</a>
+    <h3 class="cta-caption top">Ship My Double Pride Display Immediately!</h3>
+    <a class="cta" href="#">ORDER NOW!</a>
 
     <section id="section1" class="page-section clearfix">
       <div class="container">
-        <h1>Heading with basic tag about doublepride</h1>
+        <h1>Announcing a new invention that is sweeping the nation!  Early supplies are limited!</h1>
         <div class="row one">
-          <img src="http://placekitten.com/g/900/300"/>
+          <!-- <img src="http://placekitten.com/g/900/300"/> -->
         </div>
         <div class="row two">
           <div class="col-9 mx-auto">
             <p>
-              The newly invented Double Pride&#8482; Display is an exclusive, two-sided, double-window flag case and is only available with direct to your door delivery, and  only from South Point Industries.  With the Double Pride&#8482; Display, meaningful flags are able to be displayed INDOORS!  This new, one-of-a-kind Peace Through Strengh, Anti-Terror&#8482; Double Pride&#8482; Display is available only from South Point Industries, located near the Research Triangle Park in central North Carolina.  This was developed by an Ohio native, from a military veteran family, after months of research and development.  The Peace Through Strengh, Anti-Terror&#8482; Double Pride&#8482; Display is now reserved in your name ready for direct delivery to your home.
+              The Peace Through Strength, Anti-Terror&#8482; Double Pride&#8482; Display is now reserved in your name, at a significant discount, ready for direct delivery to your home.  We await your reply.  Two (2) FREE Flags included with each.  Limit three (3) displays and six (6) FREE flags per household.  Quantities of the Double Pride&#8482; Display are limited in the near future, so please respond early to guarantee your place in line.  First come first served, so order on line or call now 919-257-8448.
             </p>
           </div>
         </div>
       </div>
     </section>
 
-    <a class="cta" href="#">CAPTURE</a>
+    <h3 class="cta-caption">We Have a Double Pride Display Reserved In Your Name!</h3>
+    <a class="cta" href="#">CLAIM TODAY!</a>
 
     <section id="section2" class="page-section clearfix">
       <div class="container">
-        <h1>The DoublePride Niche - Antiterror</h1>
+        <h1>Two FREE Flags with each purchase!</h1>
         <div class="row one">
           <div class="col-9 mx-auto">
             <p>
-              <img src="http://placekitten.com/g/300/300" />
-              This new invention is the Anti-Terror, Peace Through Strength&#8482; Double Pride&#8482; Display.<br><br>
-              These are special flags designed to be displayed INDOORS!  These are special flags that are displayed perfectly in the newly invented, Double Pride&#8482; Display.<br><br>
-              Your Double Pride&#8482; Display is a new invention.  For the first time you can display two flags indoors.  Your own Double Pride&#8482; Display gives you meaning, purpose, and pride!
+              <!-- <img src="http://placekitten.com/g/300/300" /> -->
+              The newly invented Double Pride&#8482; Display is an exclusive, two-sided, double-window flag case and is only available with direct to your door delivery, and only from South Point Industries.  With the Double Pride&#8482; Display, meaningful flags are able to be displayed INDOORS!  
             </p>
           </div>
         </div>
       </div>
     </section>
 
-    <a class="cta" href="#">CAPTURE</a>
+    <h3 class="cta-caption">I'm Ready To Have My Double Pride Display!</h3>
+    <a class="cta" href="#">ClICK HERE!</a>
 
     <section id="section3" class="page-section clearfix">
       <div class="container">
-        <h1>Historical Impact and roots</h1>
+        <h1>America needs a new official symbol in our fight against terror, the Don’t Tread on America&#8482; flag!</h1>
         <div class="row">
-          <div class="col">
-            <img src="img/products-01.jpg" style="height: 300px; width: 100%"/>
-          </div>
-          <div class="col">
+          <div class="col-9 mx-auto">
             <p>
-              This new invention is the Anti-Terror, Peace Through Strength&#8482; Double Pride&#8482; Display.<br><br>
-              These are special flags designed to be displayed INDOORS!  These are special flags that are displayed perfectly in the newly invented, Double Pride&#8482; Display.<br><br>
-              Your Double Pride&#8482; Display is a new invention.  For the first time you can display two flags indoors.  Your own Double Pride&#8482; Display gives you meaning, purpose, and pride!
+              <!-- <img src="http://placekitten.com/g/300/300" /> -->
+              The historic "Don't Tread on Me" flag was our first anti-terror flag,  used by George Washington, our first anti-terror President.  This flag has been exclusively updated by South Point Industries as "Don't Tread on America&#8482;".  You cannot obtain the Don't Tread on America&#8482; flag anywhere else.  This is only available right here, right now.
             </p>
-          </div>
-          <div class="col">
-            <img src="img/products-01.jpg" style="height: 300px; width: 100%"/>
           </div>
         </div>
       </div>
     </section>
 
-    <a class="cta" href="#">CAPTURE</a>
+    <h3 class="cta-caption">Do You Support the War On Terror? Have Loved Ones in the Armed Forces? Double Pride Display Shows Your Support!</h3>
+    <a class="cta" href="#">GET YOURS IMMEDIATELY!</a>
 
     <section id="section4" class="page-section clearfix">
       <div class="container">
-        <h1>:unknown heading:</h1>
+        <h1>There is now a new way to display your most meaningful flags, INDOORS, with the new, one-of-a-kind Peace Through Strength, Anti-Terror&#8482; Double Pride&#8482; Display!</h1>
         <div class="row">
-          <div class="col">
-
+          <div class="col-9 mx-auto">
+            This new, one-of-a-kind Peace Through Strength, Anti-Terror&#8482; Double Pride&#8482; Display is available only from South Point Industries, located near the Research Triangle Park in central North Carolina.  On one side is your American Flag, and on the other side is your new, exclusive, Don't Tread on America&#8482; Flag.  Each flag, alone, has special meaning.  When two flags are displayed at the same time, they bring you extra meaning, purpose, and pride TOGETHER that is even more special than the single flags themselves!  This Double Pride&#8482; Display, featuring two (2) flags at once, was developed by an Ohio native, from a military veteran family, after months of research and development.
           </div>
         </div>
       </div>
     </section>
 
-    <a class="cta" href="#">CAPTURE</a>
+    <h3 class="cta-caption">Double Pride Display Will Be Around For Years To Come</h3>
+    <a class="cta" href="#">BECOME A PART OF HISTORY!</a>
 
     <section id="section5" class="page-section clearfix">
       <div class="container">
-        <h1>Our Forever Guarantee</h1>
+        <h1>Meaning, Purpose, and Pride&#8482; Gained by Displaying Flags Indoors with the Newly Invented Double Pride&#8482; Display.</h1>
         <div class="row">
-          <div class="col">
-            <p>Words about the guarantee</p>
+          <div class="col-9 mx-auto">
+            <p>
+              On a recent visit to Washington, DC, I could not help but be moved by our American Flag, "Old Glory".  The American Flag unites us!  Authentic flags, as President Abraham Lincoln might say, represent the better angels of our nature.  As the Philosopher Aristotle might say, our flags represent each of us, the essence of who we are, our souls, our ethos.  Flags represent us in society, our common laws and values and righteousness.  Flags represent who we are geographically, spiritually, and by common and judicial law.  Flags have been displayed outdoors in America since the Revolutionary War, and before.  It is now time to display flags indoors, with the newly invented Double Pride&#8482; Display.  Your "Anti-Terror, Peace Through Strength&#8482;" Double Pride&#8482; Display brings positive energy and a type of spiritual protection into your household.  In this small way you and your family, your household can participate in the War on Terror.  This product, with our emphasis on Peace Through Strength,  brings you joy in life, and pride.
+            </p>
           </div>
         </div>
       </div>
