--- a/index.html
+++ b/index.html
@@ -43,9 +43,10 @@
     <!-- End Google Tag Manager (noscript) -->
     <div class="header-border top"></div>
     <div class="header-border top"></div>
-    <h1 class="site-heading text-center text-white d-none d-lg-block">
+    <h1 class="site-heading text-center text-white d-lg-block">
       <span class="site-heading-upper text-primary mb-3">The Best Way to Show Your Support</span>
       <span class="site-heading-lower">Double Pride Display</span>
+      <img class="img1" src="http://placekitten.com/g/1000/400" />
     </h1>
     <div class="header-border bottom"></div>
     <div class="header-border bottom"></div>
@@ -57,12 +58,27 @@
       <div class="container">
         <h1>Announcing a new invention that is sweeping the nation!  Early supplies are limited!</h1>
         <div class="row one">
-          <!-- <img src="http://placekitten.com/g/900/300"/> -->
+          <img src="http://placekitten.com/g/900/300"/>
         </div>
         <div class="row two">
           <div class="col-9 mx-auto">
             <p>
-              The Peace Through Strength, Anti-Terror&#8482; Double Pride&#8482; Display is now reserved in your name, at a significant discount, ready for direct delivery to your home.  We await your reply.  Two (2) FREE Flags included with each.  Limit three (3) displays and six (6) FREE flags per household.  Quantities of the Double Pride&#8482; Display are limited in the near future, so please respond early to guarantee your place in line.  First come first served, so order on line or call now 919-257-8448.
+              The Peace Through Strength, Anti-Terror&#8482; Double Pride&#8482; Display is now reserved in your name, at a significant discount, ready for direct delivery to your home.
+            </p>
+            <p>
+              We await your reply.
+            </p>
+            <p>
+              Two (2) FREE Flags included with each.
+            </p>
+            <p>
+              Limit three (3) displays and six (6) FREE flags per household.
+            </p>
+            <p>
+              Quantities of the Double Pride&#8482; Display are limited in the near future, so please respond early to guarantee your place in line.
+            </p>
+            <p>
+              First come first served, so order on line or call now 919-257-8448.
             </p>
           </div>
         </div>
@@ -75,12 +91,20 @@
     <section id="section2" class="page-section clearfix">
       <div class="container">
         <h1>Two FREE Flags with each purchase!</h1>
-        <div class="row one">
-          <div class="col-9 mx-auto">
+        <div class="row">
+          <div class="col-sm one">
+            <img src="http://placekitten.com/g/300/200" />
+          </div>
+          <div class="col">
             <p>
-              <!-- <img src="http://placekitten.com/g/300/300" /> -->
-              The newly invented Double Pride&#8482; Display is an exclusive, two-sided, double-window flag case and is only available with direct to your door delivery, and only from South Point Industries.  With the Double Pride&#8482; Display, meaningful flags are able to be displayed INDOORS!  
+              The newly invented Double Pride&#8482; Display is an exclusive, two-sided, double-window flag case and is only available with direct to your door delivery, and only from South Point Industries.
             </p>
+            <p>
+              With the Double Pride&#8482; Display, meaningful flags are able to be displayed INDOORS!  
+            </p>
+          </div>
+          <div class="col-sm">
+            <img src="http://placekitten.com/g/300/200" />
           </div>
         </div>
       </div>
@@ -93,11 +117,22 @@
       <div class="container">
         <h1>America needs a new official symbol in our fight against terror, the Don’t Tread on America&#8482; flag!</h1>
         <div class="row">
-          <div class="col-9 mx-auto">
+          <div class="col one">
             <p>
-              <!-- <img src="http://placekitten.com/g/300/300" /> -->
-              The historic "Don't Tread on Me" flag was our first anti-terror flag,  used by George Washington, our first anti-terror President.  This flag has been exclusively updated by South Point Industries as "Don't Tread on America&#8482;".  You cannot obtain the Don't Tread on America&#8482; flag anywhere else.  This is only available right here, right now.
+              The historic "Don't Tread on Me" flag was our first anti-terror flag,  used by George Washington, our first anti-terror President.
             </p>
+            <p>
+              You cannot obtain the Don't Tread on America&#8482; flag anywhere else.
+            </p>
+            <p>
+              This flag has been exclusively updated by South Point Industries as "Don't Tread on America&#8482;".
+            </p>
+            <p>
+              This is only available right here, right now.
+            </p>
+          </div>
+          <div class="col">
+            <img src="http://placekitten.com/g/600/300" />
           </div>
         </div>
       </div>
@@ -109,29 +144,62 @@
     <section id="section4" class="page-section clearfix">
       <div class="container">
         <h1>There is now a new way to display your most meaningful flags, INDOORS, with the new, one-of-a-kind Peace Through Strength, Anti-Terror&#8482; Double Pride&#8482; Display!</h1>
-        <div class="row">
-          <div class="col-9 mx-auto">
-            This new, one-of-a-kind Peace Through Strength, Anti-Terror&#8482; Double Pride&#8482; Display is available only from South Point Industries, located near the Research Triangle Park in central North Carolina.  On one side is your American Flag, and on the other side is your new, exclusive, Don't Tread on America&#8482; Flag.  Each flag, alone, has special meaning.  When two flags are displayed at the same time, they bring you extra meaning, purpose, and pride TOGETHER that is even more special than the single flags themselves!  This Double Pride&#8482; Display, featuring two (2) flags at once, was developed by an Ohio native, from a military veteran family, after months of research and development.
+        <div class="row one">
+          <div class="col">
+            <img src="http://placekitten.com/g/600/400" />
+          </div>
+          <div class="col">
+            <p>
+              This new, one-of-a-kind Peace Through Strength, Anti-Terror&#8482; Double Pride&#8482; Display is available only from South Point Industries, located near the Research Triangle Park in central North Carolina.
+            </p>
+            <p>
+              On one side is your American Flag, and on the other side is your new, exclusive, Don't Tread on America&#8482; Flag.  Each flag, alone, has special meaning.
+            </p>
+            <p>
+              When two flags are displayed at the same time, they bring you extra meaning, purpose, and pride TOGETHER that is even more special than the single flags themselves!  This Double Pride&#8482; Display, featuring two (2) flags at once, was developed by an Ohio native, from a military veteran family, after months of research and development.
+            </p>
+
           </div>
         </div>
       </div>
     </section>
 
-    <h3 class="cta-caption">Double Pride Display Will Be Around For Years To Come</h3>
+    <h3 class="cta-caption">Double Pride Display Will Be Around For Generations To Come</h3>
     <a class="cta" href="#">BECOME A PART OF HISTORY!</a>
 
     <section id="section5" class="page-section clearfix">
       <div class="container">
-        <h1>Meaning, Purpose, and Pride&#8482; Gained by Displaying Flags Indoors with the Newly Invented Double Pride&#8482; Display.</h1>
+        <h1>More than a Lifetime, Double Pride Display Comes with a "Forever Guarantee"</h1>
         <div class="row">
           <div class="col-9 mx-auto">
             <p>
-              On a recent visit to Washington, DC, I could not help but be moved by our American Flag, "Old Glory".  The American Flag unites us!  Authentic flags, as President Abraham Lincoln might say, represent the better angels of our nature.  As the Philosopher Aristotle might say, our flags represent each of us, the essence of who we are, our souls, our ethos.  Flags represent us in society, our common laws and values and righteousness.  Flags represent who we are geographically, spiritually, and by common and judicial law.  Flags have been displayed outdoors in America since the Revolutionary War, and before.  It is now time to display flags indoors, with the newly invented Double Pride&#8482; Display.  Your "Anti-Terror, Peace Through Strength&#8482;" Double Pride&#8482; Display brings positive energy and a type of spiritual protection into your household.  In this small way you and your family, your household can participate in the War on Terror.  This product, with our emphasis on Peace Through Strength,  brings you joy in life, and pride.
+              Each Peace Through Strength, Anti-Terror™ Don't Tread on America Double Pride Display™, and two (2)FREE Flags, comes with a 100% lifetime money-back guarantee.
+            </p>
+            <p>
+              In fact, the guarantee is not just for your lifetime, but a forever guarantee, with no time limit.
+            </p>
+            <p>
+              The forever guarantee is included on the Inheritance Transfer Form which is shipped with each display.  At any time for any reason, no questions asked, you will receive your purchase price back with the return of your items. The Peace Through Strength, Anti-Terror™ Double Pride™ Display comes with an Inheritance Transfer Form.  This form is filled out by you and includes spaces for the name(s) of the person or organization you want to receive your Double Pride™ Display upon your death.  This ensures that your legacy, that gives you meaning, purpose, and pride, is passed down to the next generation according to your wishes.
+            </p>
+            <p>
+              You live on, and are immortal, by taking advantage of your Inheritance Transfer Form.  Your power, your values, your good taste, lasts beyond your lifetime.  This heirloom will stay in your family forever.
+            </p>
+            <p>
+              Your "Inheritance Transfer Form" is for passing down your family heirloom from generation to generation.  This form  also features a lifetime, "Forever" buy-back guarantee, and the bible quote:
+            </p>
+            <p class="quote">
+              "See, I send you out as sheep among wolves.Be then as wise as snakes, and as gentle as doves. But be on the watch against men:"
+            </p>
+            <p>
+              You have an opportunity today to become part of something larger than yourself.  This is the beginning of a national movement that is sweeping the nation.  You also have the opportunity change the look and feel of your household.
             </p>
           </div>
         </div>
       </div>
     </section>
+
+    <h3 class="cta-caption">Double Pride Display is Rich in History and Lineage</h3>
+    <a class="cta" href="#">START MY<BR>FAMILY LEGACY TODAY!</a>
     <!-- Navigation -->
     <!-- <nav class="navbar navbar-expand-lg navbar-dark py-lg-4" id="mainNav">
       <div class="container">
