more adds no server yet

--- a/index.html
+++ b/index.html
@@ -52,9 +52,10 @@
     <div class="header-border bottom"></div>
 
     <h3 class="cta-caption top">Ship My Double Pride Display Immediately!</h3>
-    <a class="cta" href="#">ORDER NOW!</a>
+    <a class="cta" href="order.html">ORDER NOW!</a>
 
     <section id="section1" class="page-section clearfix">
+
       <div class="container">
         <h1>Announcing a new invention that is sweeping the nation!  Early supplies are limited!</h1>
         <div class="row one">
@@ -86,7 +87,7 @@
     </section>
 
     <h3 class="cta-caption">We Have a Double Pride Display Reserved In Your Name!</h3>
-    <a class="cta" href="#">CLAIM TODAY!</a>
+    <a class="cta" href="order.html">CLAIM YOURS TODAY!</a>
 
     <section id="section2" class="page-section clearfix">
       <div class="container">
@@ -111,7 +112,7 @@
     </section>
 
     <h3 class="cta-caption">I'm Ready To Have My Double Pride Display!</h3>
-    <a class="cta" href="#">ClICK HERE!</a>
+    <a class="cta" href="order.html">ClICK HERE!</a>
 
     <section id="section3" class="page-section clearfix">
       <div class="container">
@@ -139,7 +140,7 @@
     </section>
 
     <h3 class="cta-caption">Do You Support the War On Terror? Have Loved Ones in the Armed Forces? Double Pride Display Shows Your Support!</h3>
-    <a class="cta" href="#">GET YOURS IMMEDIATELY!</a>
+    <a class="cta" href="order.html">GET YOURS IMMEDIATELY!</a>
 
     <section id="section4" class="page-section clearfix">
       <div class="container">
@@ -165,7 +166,7 @@
     </section>
 
     <h3 class="cta-caption">Double Pride Display Will Be Around For Generations To Come</h3>
-    <a class="cta" href="#">BECOME A PART OF HISTORY!</a>
+    <a class="cta" href="order.html">BECOME A PART OF HISTORY!</a>
 
     <section id="section5" class="page-section clearfix">
       <div class="container">
@@ -199,69 +200,7 @@
     </section>
 
     <h3 class="cta-caption">Double Pride Display is Rich in History and Lineage</h3>
-    <a class="cta" href="#">START MY<BR>FAMILY LEGACY TODAY!</a>
-    <!-- Navigation -->
-    <!-- <nav class="navbar navbar-expand-lg navbar-dark py-lg-4" id="mainNav">
-      <div class="container">
-        <a class="navbar-brand text-uppercase text-expanded font-weight-bold d-lg-none" href="#">Start Bootstrap</a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarResponsive">
-          <ul class="navbar-nav mx-auto">
-            <li class="nav-item active px-lg-4">
-              <a class="nav-link text-uppercase text-expanded" href="index.html">Home
-                <span class="sr-only">(current)</span>
-              </a>
-            </li>
-            <li class="nav-item px-lg-4">
-              <a class="nav-link text-uppercase text-expanded" href="#">About</a>
-            </li>
-            <li class="nav-item px-lg-4">
-              <a class="nav-link text-uppercase text-expanded" href="#">Products</a>
-            </li>
-            <li class="nav-item px-lg-4">
-              <a class="nav-link text-uppercase text-expanded" href="#">Store</a>
-            </li>
-          </ul>
-        </div>
-      </div>
-    </nav> -->
-
-    <!-- <section class="page-section clearfix">
-      <div class="container">
-        <div class="intro">
-          <img class="intro-img img-fluid mb-3 mb-lg-0 rounded" src="img/intro.jpg" alt="">
-          <div class="intro-text left-0 text-center bg-faded p-5 rounded">
-            <h2 class="section-heading mb-4">
-              <span class="section-heading-upper">Fresh Coffee</span>
-              <span class="section-heading-lower">Worth Drinking</span>
-            </h2>
-            <p class="mb-3">Every cup of our quality artisan coffee starts with locally sourced, hand picked ingredients. Once you try it, our coffee will be a blissful addition to your everyday morning routine - we guarantee it!
-            </p>
-            <div class="intro-button mx-auto">
-              <a class="btn btn-primary btn-xl" href="#">Visit Us Today!</a>
-            </div>
-          </div>
-        </div>
-      </div>
-    </section> -->
-
-    <!-- <section class="page-section">
-      <div class="container">
-        <div class="row">
-          <div class="col-xl-9 mx-auto">
-            <div class="text-center rounded">
-              <h2 class="section-heading mb-4">
-                <span class="section-heading-upper">Our Lifetime Forever Guarantee</span>
-                <span class="section-heading-lower">To You</span>
-              </h2>
-              <p class="mb-0">When you walk into our shop to start your day, we are dedicated to providing you with friendly service, a welcoming atmosphere, and above all else, excellent products made with the highest quality ingredients. If you are not satisfied, please let us know and we will do whatever we can to make things right!</p>
-            </div>
-          </div>
-        </div>
-      </div>
-    </section> -->
+    <a class="cta last" href="order.html">START MY<BR>FAMILY LEGACY TODAY!</a>
 
     <footer class="footer text-faded text-center py-5">
       <div class="container">
