--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
     <div class="header-border top"></div>
     <h1 class="site-heading text-center text-white d-lg-block">
       <span class="site-heading-upper text-primary mb-3">The Best Way to Show Your Support</span>
-      <span class="site-heading-lower">Double Pride Display</span>
+      <span class="site-heading-lower">Double Pride Display!!</span>
       <img class="img1" src="http://placekitten.com/g/1000/400" />
     </h1>
     <div class="header-border bottom"></div>
