--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
     <div class="header-border bottom"></div>
 
     <h3 class="cta-caption top">Ship My Double Pride Display Immediately!</h3>
-    <a class="cta" href="order.html">ORDER NOW!</a>
+    <a class="cta" href="validate/order.html">ORDER NOW!</a>
 
     <section id="section1" class="page-section clearfix">
 
@@ -87,7 +87,7 @@
     </section>
 
     <h3 class="cta-caption">We Have a Double Pride Display Reserved In Your Name!</h3>
-    <a class="cta" href="order.html">CLAIM YOURS TODAY!</a>
+    <a class="cta" href="validate/order.html">CLAIM YOURS TODAY!</a>
 
     <section id="section2" class="page-section clearfix">
       <div class="container">
@@ -112,7 +112,7 @@
     </section>
 
     <h3 class="cta-caption">I'm Ready To Have My Double Pride Display!</h3>
-    <a class="cta" href="order.html">ClICK HERE!</a>
+    <a class="cta" href="valitate/order.html">ClICK HERE!</a>
 
     <section id="section3" class="page-section clearfix">
       <div class="container">
@@ -140,7 +140,7 @@
     </section>
 
     <h3 class="cta-caption">Do You Support the War On Terror? Have Loved Ones in the Armed Forces? Double Pride Display Shows Your Support!</h3>
-    <a class="cta" href="order.html">GET YOURS IMMEDIATELY!</a>
+    <a class="cta" href="validate/order.html">GET YOURS IMMEDIATELY!</a>
 
     <section id="section4" class="page-section clearfix">
       <div class="container">
@@ -166,7 +166,7 @@
     </section>
 
     <h3 class="cta-caption">Double Pride Display Will Be Around For Generations To Come</h3>
-    <a class="cta" href="order.html">BECOME A PART OF HISTORY!</a>
+    <a class="cta" href="validate/order.html">BECOME A PART OF HISTORY!</a>
 
     <section id="section5" class="page-section clearfix">
       <div class="container">
@@ -200,7 +200,7 @@
     </section>
 
     <h3 class="cta-caption">Double Pride Display is Rich in History and Lineage</h3>
-    <a class="cta last" href="order.html">START MY<BR>FAMILY LEGACY TODAY!</a>
+    <a class="cta last" href="validate/order.html">START MY<BR>FAMILY LEGACY TODAY!</a>
 
     <footer class="footer text-faded text-center py-5">
       <div class="container">
