--- a/validate/order2.html
+++ b/validate/order2.html
@@ -24,6 +24,9 @@
 
     <title>Double Pride Display [Now! Display Your Flags Indoors!]</title>
 
+    <!-- ADDING JQUERY -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+
     <!-- Bootstrap core CSS -->
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
 
@@ -34,6 +37,38 @@
     <!-- Custom styles for this template -->
     <link href="css/business-casual.css" rel="stylesheet">
 
+    <!-- MAILCHIMP STYLES -->
+    <link href="//cdn-images.mailchimp.com/embedcode/classic-10_7.css" rel="stylesheet" type="text/css">
+    <style type="text/css">
+      #mc_embed_signup {
+        background: rgba(255,255,255,0.7);
+        border-radius: 2px;
+        clear:left;
+        font:14px Helvetica,Arial,sans-serif;
+        margin: 0 auto;
+        padding: 30px 0;
+        position: relative;
+        width: 600px;
+      }
+      #mc_embed_signup:before {
+        border-radius: 0.5rem;
+        content: '';
+        position: absolute;
+        top: -0.5rem;
+        bottom: -0.5rem;
+        left: -0.5rem;
+        right: -0.5rem;
+        border: 0.25rem solid rgba(255, 255, 255, 0.85);
+      }
+      /* Add your own MailChimp form style overrides in your site stylesheet or in this style block.
+         We recommend moving this block and the preceding CSS link to the HEAD of your HTML file. */
+    </style>
+
+    <script>
+      $(document).ready(function(){
+          console.log($('#mce-success-response').html());
+      });
+    </script>
   </head>
 
   <body>
@@ -44,37 +79,9 @@
     <div class="header-border top"></div>
     <div class="header-border top"></div>
     <h1 class="site-heading text-center text-white d-lg-block">
-      <span class="site-heading-upper text-primary mb-3">JUST A COUPLE MORE CLICKS AWAY...</span>
-      <span class="site-heading-lower">ORDERING FORM CAPTURE</span>
+      <span class="site-heading-upper text-primary mb-3">THANK YOU!!!</span>
+      <span class="site-heading-lower">THANK YOU FOR THIS</span>
     </h1>
-    <!-- Begin MailChimp Signup Form -->
-      <link href="//cdn-images.mailchimp.com/embedcode/classic-10_7.css" rel="stylesheet" type="text/css">
-      <style type="text/css">
-      	#mc_embed_signup{background:#fff; clear:left; font:14px Helvetica,Arial,sans-serif; }
-      	/* Add your own MailChimp form style overrides in your site stylesheet or in this style block.
-      	   We recommend moving this block and the preceding CSS link to the HEAD of your HTML file. */
-      </style>
-      <div id="mc_embed_signup">
-      <form action="https://ideasenvy.us18.list-manage.com/subscribe/post?u=d4a67c9c2c5e88f41aa0bb09d&amp;id=98837f8dbc" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
-          <div id="mc_embed_signup_scroll">
-
-      <div class="indicates-required"><span class="asterisk">*</span> indicates required</div>
-      <div class="mc-field-group">
-      	<label for="mce-EMAIL">Email Address  <span class="asterisk">*</span>
-      </label>
-      	<input type="email" value="" name="EMAIL" class="required email" id="mce-EMAIL">
-      </div>
-      	<div id="mce-responses" class="clear">
-      		<div class="response" id="mce-error-response" style="display:none"></div>
-      		<div class="response" id="mce-success-response" style="display:none"></div>
-      	</div>    <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
-          <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_d4a67c9c2c5e88f41aa0bb09d_98837f8dbc" tabindex="-1" value=""></div>
-          <div class="clear"><input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="button"></div>
-          </div>
-      </form>
-      </div>
-
-      <!--End mc_embed_signup-->
     <div class="header-border bottom"></div>
     <div class="header-border bottom"></div>
 
