--- a/validate/order.html
+++ b/validate/order.html
@@ -146,14 +146,14 @@
     <div class="header-border bottom"></div>
     <div class="header-border bottom"></div>
 
-    <section id="section1" class="page-section clearfix">
+    <!-- <section id="section1" class="page-section clearfix">
       <form target="paypal" action="https://www.paypal.com/cgi-bin/webscr" method="post">
         <input type="hidden" name="cmd" value="_s-xclick">
         <input type="hidden" name="hosted_button_id" value="QRTWMVHGB3VHY">
         <input type="image" src="https://www.paypalobjects.com/en_US/i/btn/btn_cart_LG.gif" border="0" name="submit" alt="PayPal - The safer, easier way to pay online!">
         <img alt="" border="0" src="https://www.paypalobjects.com/en_US/i/scr/pixel.gif" width="1" height="1">
       </form>
-    </section>
+    </section> -->
 
     <footer class="footer text-faded text-center py-5">
       <div class="container">
