--- a/validate/order2.html
+++ b/validate/order2.html
@@ -86,7 +86,7 @@
     <div class="header-border bottom"></div>
 
     <section id="section1" class="page-section clearfix">
-      <form target="paypal" action="https://www.paypal.com/cgi-bin/webscr" method="post">
+      <form action="https://www.paypal.com/cgi-bin/webscr" method="post">
         <input type="hidden" name="cmd" value="_s-xclick">
         <input type="hidden" name="hosted_button_id" value="QRTWMVHGB3VHY">
         <input type="image" src="https://www.paypalobjects.com/en_US/i/btn/btn_cart_LG.gif" border="0" name="submit" alt="PayPal - The safer, easier way to pay online!">
