settup of funnel working

--- a/validate/order2.html
+++ b/validate/order2.html
@@ -84,6 +84,7 @@
     </h1>
     <div class="header-border bottom"></div>
     <div class="header-border bottom"></div>
+    <p>Click below to continue to checkout!</p>
 
     <section id="section1" class="page-section clearfix">
       <form action="https://www.paypal.com/cgi-bin/webscr" method="post">
